src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> ejecucion
Rule 2     ejecucion -> COMENTARIO_ENCABEZADO nombre bloque FIN_ACCION
Rule 3     ejecucion -> COMENTARIO_ENCABEZADO nombre bloque FIN_ACCION comentario_vl_l
Rule 4     ejecucion -> nombre bloque FIN_ACCION comentario_vl_l
Rule 5     ejecucion -> nombre bloque FIN_ACCION
Rule 6     nombre -> ACCION IDENTIFICADOR ES
Rule 7     comentario_vl_l -> COMENTARIO_VARIASLINEAS
Rule 8     comentario_vl_l -> COMENTARIO_LINEA
Rule 9     bloque -> ambiente proceso
Rule 10    ambiente -> AMBIENTE bloque_ambiente
Rule 11    ambiente -> AMBIENTE comentario_vl_l bloque_ambiente
Rule 12    ambiente -> AMBIENTE bloque_ambiente comentario_vl_l
Rule 13    bloque_ambiente -> variable
Rule 14    bloque_ambiente -> constante
Rule 15    bloque_ambiente -> comentario_vl_l
Rule 16    bloque_ambiente -> variable bloque_ambiente
Rule 17    bloque_ambiente -> constante bloque_ambiente
Rule 18    bloque_ambiente -> comentario_vl_l bloque_ambiente
Rule 19    variable -> IDENTIFICADOR DOS_PUNTOS ftd_amb
Rule 20    constante -> IDENTIFICADOR IGUAL tipo_dato
Rule 21    ftd_amb -> TD_ALFANUMERICO
Rule 22    ftd_amb -> TD_NUMERICO
Rule 23    ftd_amb -> TD_LOGICO
Rule 24    tipo_dato -> CADENA
Rule 25    tipo_dato -> NUMERICO
Rule 26    proceso -> PROCESO conj_sentencia
Rule 27    conj_sentencia -> s_escribir
Rule 28    conj_sentencia -> s_leer
Rule 29    conj_sentencia -> s_si
Rule 30    conj_sentencia -> s_segun
Rule 31    conj_sentencia -> s_ciclos
Rule 32    conj_sentencia -> sentencia
Rule 33    conj_sentencia -> comentario_vl_l
Rule 34    conj_sentencia -> s_escribir conj_sentencia
Rule 35    conj_sentencia -> s_leer conj_sentencia
Rule 36    conj_sentencia -> s_si conj_sentencia
Rule 37    conj_sentencia -> s_segun conj_sentencia
Rule 38    conj_sentencia -> s_ciclos conj_sentencia
Rule 39    conj_sentencia -> sentencia conj_sentencia
Rule 40    conj_sentencia -> comentario_vl_l conj_sentencia
Rule 41    s_escribir -> ESCRIBIR PARENTESIS_ABIERTO salida_esc PARENTESIS_CERRADO
Rule 42    salida_esc -> IDENTIFICADOR
Rule 43    salida_esc -> CADENA
Rule 44    salida_esc -> IDENTIFICADOR COMA salida_esc
Rule 45    salida_esc -> CADENA COMA salida_esc
Rule 46    s_leer -> LEER PARENTESIS_ABIERTO entrada_leer PARENTESIS_CERRADO
Rule 47    entrada_leer -> IDENTIFICADOR
Rule 48    sentencia -> IDENTIFICADOR ASIGNACION tipo_dato
Rule 49    sentencia -> IDENTIFICADOR ASIGNACION op_aritmetica
Rule 50    id_tipodato -> IDENTIFICADOR
Rule 51    id_tipodato -> tipo_dato
Rule 52    op_aritmetica -> id_tipodato t_op_aritmetico id_tipodato
Rule 53    op_aritmetica -> id_tipodato t_op_aritmetico op_aritmetica
Rule 54    op_aritmetica -> id_tipodato
Rule 55    op_aritmetica -> PARENTESIS_ABIERTO op_aritmetica PARENTESIS_CERRADO t_op_aritmetico op_aritmetica
Rule 56    op_aritmetica -> PARENTESIS_ABIERTO op_aritmetica PARENTESIS_CERRADO
Rule 57    t_op_aritmetico -> SUMA
Rule 58    t_op_aritmetico -> RESTA
Rule 59    t_op_aritmetico -> DIVISION
Rule 60    t_op_aritmetico -> MULTIPLICACION
Rule 61    t_op_aritmetico -> DIVISION_ENTERA
Rule 62    t_op_aritmetico -> MODULO
Rule 63    t_op_aritmetico -> POTENCIA
Rule 64    t_relacional -> MENOR_QUE
Rule 65    t_relacional -> MAYOR_QUE
Rule 66    t_relacional -> MENOR_O_IGUAL_QUE
Rule 67    t_relacional -> MAYOR_O_IGUAL_QUE
Rule 68    t_relacional -> IGUAL
Rule 69    t_relacional -> DISTINTO
Rule 70    t_op_logico -> O
Rule 71    t_op_logico -> Y
Rule 72    s_si -> SI PARENTESIS_ABIERTO conj_condiciones PARENTESIS_CERRADO ENTONCES conj_s_si FIN_SI
Rule 73    s_si -> SI PARENTESIS_ABIERTO IDENTIFICADOR PARENTESIS_CERRADO ENTONCES conj_s_si FIN_SI
Rule 74    conj_s_si -> conj_sentencia
Rule 75    conj_s_si -> conj_sentencia SINO conj_s_si
Rule 76    conj_condiciones -> condicion
Rule 77    conj_condiciones -> condicion t_op_logico conj_condiciones
Rule 78    conj_condiciones -> NO condicion
Rule 79    conj_condiciones -> PARENTESIS_ABIERTO conj_condiciones PARENTESIS_CERRADO
Rule 80    condicion -> expresion t_relacional expresion
Rule 81    condicion -> NO expresion
Rule 82    condicion -> PARENTESIS_ABIERTO condicion PARENTESIS_CERRADO
Rule 83    expresion -> id_tipodato
Rule 84    expresion -> id_tipodato t_op_aritmetico id_tipodato
Rule 85    expresion -> id_tipodato t_op_aritmetico expresion
Rule 86    expresion -> PARENTESIS_ABIERTO expresion PARENTESIS_CERRADO
Rule 87    s_segun -> SEGUN PARENTESIS_ABIERTO IDENTIFICADOR PARENTESIS_CERRADO HACER conj_cond_segun FIN_SEGUN
Rule 88    conj_cond_segun -> t_relacional id_tipodato DOS_PUNTOS conj_sentencia
Rule 89    conj_cond_segun -> t_relacional id_tipodato DOS_PUNTOS conj_sentencia conj_cond_segun
Rule 90    conj_cond_segun -> OTRO DOS_PUNTOS conj_sentencia
Rule 91    s_ciclos -> c_para
Rule 92    s_ciclos -> c_mientras
Rule 93    s_ciclos -> c_repetir
Rule 94    c_mientras -> MIENTRAS PARENTESIS_ABIERTO conj_condiciones PARENTESIS_CERRADO HACER conj_sentencia FIN_MIENTRAS
Rule 95    c_repetir -> REPETIR conj_sentencia HASTA_QUE PARENTESIS_ABIERTO conj_condiciones PARENTESIS_CERRADO
Rule 96    c_para -> PARA PARENTESIS_ABIERTO idt_para PARENTESIS_CERRADO HASTA id_tipodato COMA id_tipodato HACER conj_sentencia FIN_PARA
Rule 97    c_para -> PARA PARENTESIS_ABIERTO idt_para PARENTESIS_CERRADO HASTA id_tipodato HACER conj_sentencia FIN_PARA
Rule 98    c_para -> PARA idt_para HASTA id_tipodato HACER conj_sentencia FIN_PARA
Rule 99    idt_para -> IDENTIFICADOR ASIGNACION id_tipodato
Rule 100   idt_para -> IDENTIFICADOR

Terminals, with rules where they appear

ACCION               : 6
AMBIENTE             : 10 11 12
ASIGNACION           : 48 49 99
CADENA               : 24 43 45
COMA                 : 44 45 96
COMENTARIO_ENCABEZADO : 2 3
COMENTARIO_LINEA     : 8
COMENTARIO_VARIASLINEAS : 7
DISTINTO             : 69
DIVISION             : 59
DIVISION_ENTERA      : 61
DOS_PUNTOS           : 19 88 89 90
ENTONCES             : 72 73
ES                   : 6
ESCRIBIR             : 41
FIN_ACCION           : 2 3 4 5
FIN_MIENTRAS         : 94
FIN_PARA             : 96 97 98
FIN_SEGUN            : 87
FIN_SI               : 72 73
HACER                : 87 94 96 97 98
HASTA                : 96 97 98
HASTA_QUE            : 95
IDENTIFICADOR        : 6 19 20 42 44 47 48 49 50 73 87 99 100
IGUAL                : 20 68
LEER                 : 46
MAYOR_O_IGUAL_QUE    : 67
MAYOR_QUE            : 65
MENOR_O_IGUAL_QUE    : 66
MENOR_QUE            : 64
MIENTRAS             : 94
MODULO               : 62
MULTIPLICACION       : 60
NO                   : 78 81
NUMERICO             : 25
O                    : 70
OTRO                 : 90
PARA                 : 96 97 98
PARENTESIS_ABIERTO   : 41 46 55 56 72 73 79 82 86 87 94 95 96 97
PARENTESIS_CERRADO   : 41 46 55 56 72 73 79 82 86 87 94 95 96 97
POTENCIA             : 63
PROCESO              : 26
REPETIR              : 95
RESTA                : 58
SEGUN                : 87
SI                   : 72 73
SINO                 : 75
SUMA                 : 57
TD_ALFANUMERICO      : 21
TD_LOGICO            : 23
TD_NUMERICO          : 22
Y                    : 71
error                : 

Nonterminals, with rules where they appear

ambiente             : 9
bloque               : 2 3 4 5
bloque_ambiente      : 10 11 12 16 17 18
c_mientras           : 92
c_para               : 91
c_repetir            : 93
comentario_vl_l      : 3 4 11 12 15 18 33 40
condicion            : 76 77 78 82
conj_cond_segun      : 87 89
conj_condiciones     : 72 77 79 94 95
conj_s_si            : 72 73 75
conj_sentencia       : 26 34 35 36 37 38 39 40 74 75 88 89 90 94 95 96 97 98
constante            : 14 17
ejecucion            : 1
entrada_leer         : 46
expresion            : 80 80 81 85 86
ftd_amb              : 19
id_tipodato          : 52 52 53 54 83 84 84 85 88 89 96 96 97 98 99
idt_para             : 96 97 98
nombre               : 2 3 4 5
op_aritmetica        : 49 53 55 55 56
proceso              : 9
s_ciclos             : 31 38
s_escribir           : 27 34
s_leer               : 28 35
s_segun              : 30 37
s_si                 : 29 36
salida_esc           : 41 44 45
sentencia            : 32 39
sigma                : 0
t_op_aritmetico      : 52 53 55 84 85
t_op_logico          : 77
t_relacional         : 80 88 89
tipo_dato            : 20 48 51
variable             : 13 16

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . ejecucion
    (2) ejecucion -> . COMENTARIO_ENCABEZADO nombre bloque FIN_ACCION
    (3) ejecucion -> . COMENTARIO_ENCABEZADO nombre bloque FIN_ACCION comentario_vl_l
    (4) ejecucion -> . nombre bloque FIN_ACCION comentario_vl_l
    (5) ejecucion -> . nombre bloque FIN_ACCION
    (6) nombre -> . ACCION IDENTIFICADOR ES

    COMENTARIO_ENCABEZADO shift and go to state 3
    ACCION          shift and go to state 5

    sigma                          shift and go to state 1
    ejecucion                      shift and go to state 2
    nombre                         shift and go to state 4

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> ejecucion .

    $end            reduce using rule 1 (sigma -> ejecucion .)


state 3

    (2) ejecucion -> COMENTARIO_ENCABEZADO . nombre bloque FIN_ACCION
    (3) ejecucion -> COMENTARIO_ENCABEZADO . nombre bloque FIN_ACCION comentario_vl_l
    (6) nombre -> . ACCION IDENTIFICADOR ES

    ACCION          shift and go to state 5

    nombre                         shift and go to state 6

state 4

    (4) ejecucion -> nombre . bloque FIN_ACCION comentario_vl_l
    (5) ejecucion -> nombre . bloque FIN_ACCION
    (9) bloque -> . ambiente proceso
    (10) ambiente -> . AMBIENTE bloque_ambiente
    (11) ambiente -> . AMBIENTE comentario_vl_l bloque_ambiente
    (12) ambiente -> . AMBIENTE bloque_ambiente comentario_vl_l

    AMBIENTE        shift and go to state 9

    bloque                         shift and go to state 7
    ambiente                       shift and go to state 8

state 5

    (6) nombre -> ACCION . IDENTIFICADOR ES

    IDENTIFICADOR   shift and go to state 10


state 6

    (2) ejecucion -> COMENTARIO_ENCABEZADO nombre . bloque FIN_ACCION
    (3) ejecucion -> COMENTARIO_ENCABEZADO nombre . bloque FIN_ACCION comentario_vl_l
    (9) bloque -> . ambiente proceso
    (10) ambiente -> . AMBIENTE bloque_ambiente
    (11) ambiente -> . AMBIENTE comentario_vl_l bloque_ambiente
    (12) ambiente -> . AMBIENTE bloque_ambiente comentario_vl_l

    AMBIENTE        shift and go to state 9

    bloque                         shift and go to state 11
    ambiente                       shift and go to state 8

state 7

    (4) ejecucion -> nombre bloque . FIN_ACCION comentario_vl_l
    (5) ejecucion -> nombre bloque . FIN_ACCION

    FIN_ACCION      shift and go to state 12


state 8

    (9) bloque -> ambiente . proceso
    (26) proceso -> . PROCESO conj_sentencia

    PROCESO         shift and go to state 14

    proceso                        shift and go to state 13

state 9

    (10) ambiente -> AMBIENTE . bloque_ambiente
    (11) ambiente -> AMBIENTE . comentario_vl_l bloque_ambiente
    (12) ambiente -> AMBIENTE . bloque_ambiente comentario_vl_l
    (13) bloque_ambiente -> . variable
    (14) bloque_ambiente -> . constante
    (15) bloque_ambiente -> . comentario_vl_l
    (16) bloque_ambiente -> . variable bloque_ambiente
    (17) bloque_ambiente -> . constante bloque_ambiente
    (18) bloque_ambiente -> . comentario_vl_l bloque_ambiente
    (7) comentario_vl_l -> . COMENTARIO_VARIASLINEAS
    (8) comentario_vl_l -> . COMENTARIO_LINEA
    (19) variable -> . IDENTIFICADOR DOS_PUNTOS ftd_amb
    (20) constante -> . IDENTIFICADOR IGUAL tipo_dato

    COMENTARIO_VARIASLINEAS shift and go to state 19
    COMENTARIO_LINEA shift and go to state 20
    IDENTIFICADOR   shift and go to state 21

    bloque_ambiente                shift and go to state 15
    comentario_vl_l                shift and go to state 16
    variable                       shift and go to state 17
    constante                      shift and go to state 18

state 10

    (6) nombre -> ACCION IDENTIFICADOR . ES

    ES              shift and go to state 22


state 11

    (2) ejecucion -> COMENTARIO_ENCABEZADO nombre bloque . FIN_ACCION
    (3) ejecucion -> COMENTARIO_ENCABEZADO nombre bloque . FIN_ACCION comentario_vl_l

    FIN_ACCION      shift and go to state 23


state 12

    (4) ejecucion -> nombre bloque FIN_ACCION . comentario_vl_l
    (5) ejecucion -> nombre bloque FIN_ACCION .
    (7) comentario_vl_l -> . COMENTARIO_VARIASLINEAS
    (8) comentario_vl_l -> . COMENTARIO_LINEA

    $end            reduce using rule 5 (ejecucion -> nombre bloque FIN_ACCION .)
    COMENTARIO_VARIASLINEAS shift and go to state 19
    COMENTARIO_LINEA shift and go to state 20

    comentario_vl_l                shift and go to state 24

state 13

    (9) bloque -> ambiente proceso .

    FIN_ACCION      reduce using rule 9 (bloque -> ambiente proceso .)


state 14

    (26) proceso -> PROCESO . conj_sentencia
    (27) conj_sentencia -> . s_escribir
    (28) conj_sentencia -> . s_leer
    (29) conj_sentencia -> . s_si
    (30) conj_sentencia -> . s_segun
    (31) conj_sentencia -> . s_ciclos
    (32) conj_sentencia -> . sentencia
    (33) conj_sentencia -> . comentario_vl_l
    (34) conj_sentencia -> . s_escribir conj_sentencia
    (35) conj_sentencia -> . s_leer conj_sentencia
    (36) conj_sentencia -> . s_si conj_sentencia
    (37) conj_sentencia -> . s_segun conj_sentencia
    (38) conj_sentencia -> . s_ciclos conj_sentencia
    (39) conj_sentencia -> . sentencia conj_sentencia
    (40) conj_sentencia -> . comentario_vl_l conj_sentencia
    (41) s_escribir -> . ESCRIBIR PARENTESIS_ABIERTO salida_esc PARENTESIS_CERRADO
    (46) s_leer -> . LEER PARENTESIS_ABIERTO entrada_leer PARENTESIS_CERRADO
    (72) s_si -> . SI PARENTESIS_ABIERTO conj_condiciones PARENTESIS_CERRADO ENTONCES conj_s_si FIN_SI
    (73) s_si -> . SI PARENTESIS_ABIERTO IDENTIFICADOR PARENTESIS_CERRADO ENTONCES conj_s_si FIN_SI
    (87) s_segun -> . SEGUN PARENTESIS_ABIERTO IDENTIFICADOR PARENTESIS_CERRADO HACER conj_cond_segun FIN_SEGUN
    (91) s_ciclos -> . c_para
    (92) s_ciclos -> . c_mientras
    (93) s_ciclos -> . c_repetir
    (48) sentencia -> . IDENTIFICADOR ASIGNACION tipo_dato
    (49) sentencia -> . IDENTIFICADOR ASIGNACION op_aritmetica
    (7) comentario_vl_l -> . COMENTARIO_VARIASLINEAS
    (8) comentario_vl_l -> . COMENTARIO_LINEA
    (96) c_para -> . PARA PARENTESIS_ABIERTO idt_para PARENTESIS_CERRADO HASTA id_tipodato COMA id_tipodato HACER conj_sentencia FIN_PARA
    (97) c_para -> . PARA PARENTESIS_ABIERTO idt_para PARENTESIS_CERRADO HASTA id_tipodato HACER conj_sentencia FIN_PARA
    (98) c_para -> . PARA idt_para HASTA id_tipodato HACER conj_sentencia FIN_PARA
    (94) c_mientras -> . MIENTRAS PARENTESIS_ABIERTO conj_condiciones PARENTESIS_CERRADO HACER conj_sentencia FIN_MIENTRAS
    (95) c_repetir -> . REPETIR conj_sentencia HASTA_QUE PARENTESIS_ABIERTO conj_condiciones PARENTESIS_CERRADO

    ESCRIBIR        shift and go to state 33
    LEER            shift and go to state 34
    SI              shift and go to state 35
    SEGUN           shift and go to state 37
    IDENTIFICADOR   shift and go to state 36
    COMENTARIO_VARIASLINEAS shift and go to state 19
    COMENTARIO_LINEA shift and go to state 20
    PARA            shift and go to state 41
    MIENTRAS        shift and go to state 42
    REPETIR         shift and go to state 43

    conj_sentencia                 shift and go to state 25
    s_escribir                     shift and go to state 26
    s_leer                         shift and go to state 27
    s_si                           shift and go to state 28
    s_segun                        shift and go to state 29
    s_ciclos                       shift and go to state 30
    sentencia                      shift and go to state 31
    comentario_vl_l                shift and go to state 32
    c_para                         shift and go to state 38
    c_mientras                     shift and go to state 39
    c_repetir                      shift and go to state 40

state 15

    (10) ambiente -> AMBIENTE bloque_ambiente .
    (12) ambiente -> AMBIENTE bloque_ambiente . comentario_vl_l
    (7) comentario_vl_l -> . COMENTARIO_VARIASLINEAS
    (8) comentario_vl_l -> . COMENTARIO_LINEA

    PROCESO         reduce using rule 10 (ambiente -> AMBIENTE bloque_ambiente .)
    COMENTARIO_VARIASLINEAS shift and go to state 19
    COMENTARIO_LINEA shift and go to state 20

    comentario_vl_l                shift and go to state 44

state 16

    (11) ambiente -> AMBIENTE comentario_vl_l . bloque_ambiente
    (15) bloque_ambiente -> comentario_vl_l .
    (18) bloque_ambiente -> comentario_vl_l . bloque_ambiente
    (13) bloque_ambiente -> . variable
    (14) bloque_ambiente -> . constante
    (15) bloque_ambiente -> . comentario_vl_l
    (16) bloque_ambiente -> . variable bloque_ambiente
    (17) bloque_ambiente -> . constante bloque_ambiente
    (18) bloque_ambiente -> . comentario_vl_l bloque_ambiente
    (19) variable -> . IDENTIFICADOR DOS_PUNTOS ftd_amb
    (20) constante -> . IDENTIFICADOR IGUAL tipo_dato
    (7) comentario_vl_l -> . COMENTARIO_VARIASLINEAS
    (8) comentario_vl_l -> . COMENTARIO_LINEA

  ! shift/reduce conflict for COMENTARIO_VARIASLINEAS resolved as shift
  ! shift/reduce conflict for COMENTARIO_LINEA resolved as shift
    PROCESO         reduce using rule 15 (bloque_ambiente -> comentario_vl_l .)
    IDENTIFICADOR   shift and go to state 21
    COMENTARIO_VARIASLINEAS shift and go to state 19
    COMENTARIO_LINEA shift and go to state 20

  ! COMENTARIO_VARIASLINEAS [ reduce using rule 15 (bloque_ambiente -> comentario_vl_l .) ]
  ! COMENTARIO_LINEA [ reduce using rule 15 (bloque_ambiente -> comentario_vl_l .) ]

    comentario_vl_l                shift and go to state 45
    bloque_ambiente                shift and go to state 46
    variable                       shift and go to state 17
    constante                      shift and go to state 18

state 17

    (13) bloque_ambiente -> variable .
    (16) bloque_ambiente -> variable . bloque_ambiente
    (13) bloque_ambiente -> . variable
    (14) bloque_ambiente -> . constante
    (15) bloque_ambiente -> . comentario_vl_l
    (16) bloque_ambiente -> . variable bloque_ambiente
    (17) bloque_ambiente -> . constante bloque_ambiente
    (18) bloque_ambiente -> . comentario_vl_l bloque_ambiente
    (19) variable -> . IDENTIFICADOR DOS_PUNTOS ftd_amb
    (20) constante -> . IDENTIFICADOR IGUAL tipo_dato
    (7) comentario_vl_l -> . COMENTARIO_VARIASLINEAS
    (8) comentario_vl_l -> . COMENTARIO_LINEA
